--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -168,8 +168,8 @@ h1, h2, h3, h4, h5, h6, p {
     }
 }
 
-.artilce {
-    padding: 20px 40px;
+.article {
+    padding: 20px 0 40px;
 
     &__inner {
         display: flex;
